--- a/VRChat/26/1374026.html
+++ b/VRChat/26/1374026.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "62U7aMAdjK0y8cnt9fwIXGQk0IlLT/ZXwi9lI5zjhLY="></script>
+    "/cQEb5++bGsT2sW4Xza2QKLVrLN5z3Le0rrvGeMN4Ag="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け超ウルトラ高品質あヴぁたー","description":"ＶＲＣhat向けのはいぱー高品質あヴぁターです！\n高品質なので価格は適正です！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！\n大安売りだよ！！！！！！！！！！！！！！（どっち！！！！）\n\nハイポリゴンメッシュ（△200万）も同梱してるので好きにしてね！！！！！！！！！！！！","url":"https://booth.pm/ja/items/1374026","offers":{"priceCurrency":"JPY","@type":"Offer","price":"9680"},"image":"https://booth.pximg.net/c/620x620/29cbdbe7-d2fb-463e-9d1e-cb8f1e92083e/i/1374026/a68904d3-30b0-4964-9960-dcc89d00e6c6_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="62U7aMAdjK0y8cnt9fwIXGQk0IlLT/ZXwi9lI5zjhLY="></script>
+    nonce="/cQEb5++bGsT2sW4Xza2QKLVrLN5z3Le0rrvGeMN4Ag="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -404,9 +404,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
