--- a/VRChat/33/1373933.html
+++ b/VRChat/33/1373933.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "uN/JcJEJ2jzyvKjIyKCGU4Awn+/QGdrqqlPiTBQ+3Os="></script>
+    "deKVnCfV1FYdIFl/lEnbmerHzwr3fx3c8HIKyizLEps="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向けモデル「和傘」","description":"試作の和傘です。基本無料\nシェイプキー1を100にすると閉じます。\nポリ数：3240\n\nダウンロードをした時点で以下の規約に同意したとみなします。\n\nやっていいこと\n・改変\n・アバターに持たせること（ペデスタルアバターへの使用可）\n・ワールドに置くこと\n・個人・商用問わず何かしらのゲームに組み込む事\n\nやってはいけないこと\n・特定の宗教、信条、政治関連に関わる作品、行動に使う事\n・他人への誹謗中傷に使う事\n・R-18、R-18G作品や行動への使用\n・自作したと偽ること　著作権は放棄していません。\n\nこのデータを使用して何らかのトラブルや不具合が生じても、Lermiteは何ら責任を負いません。\n上記で禁止した事項を行った場合、利用許諾は消えるものとし、違反者は著作権法で裁けるものとします。","url":"https://booth.pm/ja/items/1373933","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/b8474108-5499-4da9-b74d-db41150399f3/i/1373933/02d25baf-9401-40e6-a69f-1a7faa4d88f2_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="uN/JcJEJ2jzyvKjIyKCGU4Awn+/QGdrqqlPiTBQ+3Os="></script>
+    nonce="deKVnCfV1FYdIFl/lEnbmerHzwr3fx3c8HIKyizLEps="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -477,9 +477,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
