--- a/VRChat/52/1038652.html
+++ b/VRChat/52/1038652.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "8b6F5bjYH/twg0WFXVMiFH53d8VZvT3KPSUq9BfoC5w="></script>
+    "Df/4HzSJK7zoWu2v9qFF3DnELQJG704RaAx3+OeREZo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"黒板、ホワイトボードのローポリ3Dモデル、ボード描き用UV画像【オリジナル3Dモデル】","description":"黒板とホワイトボードのローポリ3Dモデル2種（縦長△44ポリゴン、横長△44ポリゴン）、Prefab8種です。\n\nVRChatのアバター、ワールドでの使用を想定して制作しました。\nお店の入り口や建物内の壁など、さまざまな場面で使うことができます。\nワールド内のギミックで、文字や絵を書き換えていく使い方も考えられます。\n使用の際は、縦横の比率を変えずにサイズ調整することをおすすめします。\n\n---------------------------------------------------------------\nファイルの中身\n・Board.unitypackage\n・Board.fbx（△44ポリゴン）\n・Board_Wide.fbx（△44ポリゴン）\n・BlackBoard.tga\n・BlackBoard_Emission.tga\n・BlackBoard_Wide_Emission.tga\n・Board_Wood.tga\n・Board_Wood_Normal.tga\n・WhiteBoard.tga\n・WhiteBoard_Second.tga\n・BoardUV.png（縦長ボードのUV）\n・Board_WideUV.png（横長ボードのUV）\n・WoodUV.png（木枠のUV）\n\nテクスチャデータはサイズ1024で制作しました。\n圧縮前のデータをzipに入れてあります。\nファイルサイズが大きいので、unityで使う際に圧縮をしてください。\nunitypackage内のテクスチャは圧縮をしてあります。\n\nsampleシーンはunity version 5.6.3p1で制作しました。\n\n改変自由。\n3Dモデルデータとして使える状態での再配布禁止。\nゲーム、映像作品などで使うことができます。商用可。\n誹謗中傷、違法行為、または国防に関する法律に違反する行為への使用を禁止します。","url":"https://booth.pm/ja/items/1038652","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/ba1632d1-d7a2-47bf-b5c7-b1b4c83290fc/i/1038652/af37cd46-8d3c-4c96-91ad-cd4e229e17bc_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="8b6F5bjYH/twg0WFXVMiFH53d8VZvT3KPSUq9BfoC5w="></script>
+    nonce="Df/4HzSJK7zoWu2v9qFF3DnELQJG704RaAx3+OeREZo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -175,7 +175,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      309
+                                      310
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -191,7 +191,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      309
+                                      310
                                     </div>
                                   </div></a>
                                 </div>
@@ -477,9 +477,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
