--- a/VRChat/08/1371408.html
+++ b/VRChat/08/1371408.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "NpyxEGDXS24OeLu6vnZVr+STdNnJpX5r6RRuGLKgzYk="></script>
+    "4HDSMpJbLS51UUNjo+q/nT1bgMt3WfF3Ihb6gL5poDM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"使えそうでイマイチ使えない英字Ｔシャツシリーズ","description":"VRchatの際に、英語が喋れない・マイクを使っていないなどを服に書いておけば伝わりやすいのでは？\nと作成してみた商品です。無料版\n有料版に違いはありません。\nグーグル翻訳での文章となります。\nVRoidの制服で読み込んでいただければ使用できるはずです。\n女性上のモデルで作成してありますが、男性でも利用はできますが多少胸元の文字に歪みがあります。\n無地を含めて7種類入っております。\n\n無地のタイプにはご自身で好きなロゴや文字を入れていただいてご利用いただけます。\n商用利用可\n\n","url":"https://booth.pm/ja/items/1371408","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/40e1f3f8-e797-4628-a216-6e8962c8f3ea/i/1371408/b9c6825f-28de-4b68-9274-4e07b273b968_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="NpyxEGDXS24OeLu6vnZVr+STdNnJpX5r6RRuGLKgzYk="></script>
+    nonce="4HDSMpJbLS51UUNjo+q/nT1bgMt3WfF3Ihb6gL5poDM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -455,9 +455,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
